--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -62,7 +62,8 @@
 					  <div class="panel-body">
 
 							<ul class="nav nav-pills">
-								<li role="presentation" class="dropdown">
+								<li role="presentation" class="choose-filter dropdown">
+									<div class="filter-name">All Requests</div>
 									<a id="filter-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 										Switch filter
 										<span class="caret"></span>
