--- a/app/assets/stylesheets/templates.css.scss
+++ b/app/assets/stylesheets/templates.css.scss
@@ -5,6 +5,7 @@
 	// background-color: lightgrey;
 	// padding:5px;
 	display: inline-block;
+	margin: 10px;
 	img:hover, div:hover {
 		position: relative;
 		transform: scale(1.1);
@@ -25,6 +26,6 @@
 	font-size: 30px;
 	color: black;
 	width: 230px;
-	padding: 90px 0px !important;
+	padding: 107px 0px !important;
 	text-align: center;
 }
