--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -60,34 +60,7 @@
 					<div id="current-requests" class="panel-collapse collapse" role="tabpanel" aria-labelledby="current-requests-heading">
 					  <div class="panel-body">
 
-							<ul class="nav nav-pills">
-								<li role="presentation" class="choose-filter dropdown">
-									<div class="filter-name">All Requests</div>
-									<a id="filter-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-										Switch filter
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu" aria-labelledby="filter-dropdown">
-										<li class="active">
-											<%= link_to "All Requests", "#", class: "filter", id: "all-issues", data: { filter: "*" } %>
-										</li>
-										<li>
-											<%= link_to "Mine to Design", "#", class: "filter", id: "mine-to-design", data: { filter: ".designer-#{current_user.id}" } %>
-										</li>
-										<li>
-											<%= link_to "Mine to Review", "#", class: "filter", id: "mine-to-review", data: { filter: ".reviewer-#{current_user.id}" } %>
-										</li>
-										<li>
-											<%= link_to "Requested by Me", "#", class: "filter", id: "my-requests", data: { filter: ".user-#{current_user.id}" } %>
-										</li>
-										<% @statuses.each do |status| %>
-											<li>
-												<%= link_to "#{status["name"]} Requests", "#", class: "filter", id: "#{status["name"]}-requests", data: { filter: ".status-#{status["id"]}"} %>
-											</li>
-										<% end %>
-									</ul>
-								</li>
-							</ul>
+							<%= render partial: '/publication_requests/view_controls' %>
 							<%= render partial: '/publication_requests/index', locals: { requests: @requests } %>
 
 					  </div>
