Added more info to request thumbs. Need feedback on design

--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -44,6 +44,10 @@
   box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.2);
   z-index: 999;
 }
+.request-thumb-info {
+  border-top: 1px solid #ddd;
+  padding-top: 2px;
+}
 
 .module-content .list {
   padding-left: 0;
