--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,3 +10,20 @@
     color: $gray-light;
   }
 }
+
+.user {
+	left: 15px;
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	background-color: $brand-primary;
+	color: white;
+	border-radius: 3px;
+}
+
+.user-initials {
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	display: block;
+}
