--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "users" %>
 <%= stylesheet_link_tag "comments" %>
 <%= stylesheet_link_tag "request_attachments" %>
 <%= javascript_include_tag "comments" %>
