--- a/app/views/publication_requests/_index.html.erb
+++ b/app/views/publication_requests/_index.html.erb
@@ -13,8 +13,18 @@
 																}) do %>
 					<%= link_to(publication_request_path(request["id"])) do %>
 						<h3 class="event-name"><%= request["event"] %></h3>
-						<hr>
-						<p><%= render partial: 'statuses/label', locals: { status: request['status'] } %></p>
+						<div class="request-thumb-info">
+							<div><%= render partial: 'statuses/label', locals: { status: request['status'] } %></div>
+							<div class="request-user">
+								<small>Requester: <%= "#{request['user']['first_name']} #{request['user']['last_name']}" %></small>
+							</div>
+							<div class="request-designer">
+								<small>Designer: <%= "#{request['designer']['first_name']} #{request['designer']['last_name']}" %></small>
+							</div>
+							<div class="request-reviewer">
+								<small>Reviewer: <%= "#{request['reviewer']['first_name']} #{request['reviewer']['last_name']}" %></small>
+							</div>
+						</div>
 					<% end %>
 				<% end %>
 			<% end %>
