--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "users" %>
 <%= stylesheet_link_tag "templates" %>
 <%= stylesheet_link_tag "statuses" %>
 <%= stylesheet_link_tag "publication_requests" %>
