--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,7 @@
 			  <div class="panel panel-default">
 			    <div class="panel-heading" role="tab" id="create-request-heading">
 			      <h3 class="panel-title">
-			        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#create-request-templates" aria-expanded="true" aria-controls="create-request-templates">
+			        <a class="accordion-link" role="button" data-toggle="collapse" data-parent="#accordion" href="#create-request-templates" aria-expanded="true" aria-controls="create-request-templates">
 								Submit a Publication Request
 			        </a>
 			      </h3>
@@ -53,7 +53,7 @@
 				<div class="panel panel-default">
 				  <div class="panel-heading" role="tab" id="current-requests-heading">
 				    <h4 class="panel-title">
-							<a role="button" data-toggle="collapse" data-parent="#accordion" href="#current-requests" aria-expanded="true" aria-controls="current-requests">
+							<a class="accordion-link" role="button" data-toggle="collapse" data-parent="#accordion" href="#current-requests" aria-expanded="true" aria-controls="current-requests">
 								View Publication Requests
 			        </a>
 						</h4>
