--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "bootstrap";
 @import "editable/bootstrap-editable";
 @import 'bootstrap-datetimepicker';
+@import "select2";
+@import "select2-bootstrap";
 // @import "jquery.minicolors";
 
 .container-fluid {
