--- a/app/views/templates/_index.html.erb
+++ b/app/views/templates/_index.html.erb
@@ -13,6 +13,19 @@
 </div>
 <% templates.each do |template| %>
 	<div class="template-cell">
-		<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
+		<%= link_to(new_publication_request_path(:template_id => template['id'])) do %>
+			<div class="panel panel-default">
+			  <div class="panel-body">
+						<%= image_tag(template['image_medium']) %>
+			  </div>
+			  <div class="panel-footer">
+					<div class="tags">
+						<% template["tags"].each do |tag| %>
+							<span class="label label-info"><%=tag["name"]%></span>
+						<% end %>
+					</div>
+			  </div>
+			</div>
+		<% end %>
 	</div>
 <% end %>
