--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,6 +40,7 @@
 								</div>
 							</div>
 
+							<%= render partial: '/templates/view_controls' %>
 							<div class="wall" id="templates-wall">
 								<div class="col-md-12">
 									<%= render partial: '/templates/index', locals: { templates: @templates } %>
