--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -22,7 +22,10 @@
 
 			<div class="field form-group <%=field_class(@template, :all_tags) %>">
 			    <%= f.label :all_tags, "Tags for this template", class: "control-label" %>
-					<%= f.select :all_tags, @tag_options, { prompt: "Select tags or create new ones", include_hidden: false }, { class: "form-control", multiple: true } %>
+					<%= f.select :all_tags, @tag_options, { prompt: "Select tags or create new ones", include_hidden: false }, { class: "form-control", multiple: true, "aria-describedby" => "tagHelp" } %>
+					<%= content_tag :span, id: "tagHelp", class: "help-block" do %>
+						Only lowercase letters, dashes, and underscores allowed
+					<% end %>
 			</div>
 
 			<div class="field form-group <%=field_class(@template, :image) %>">
