Center template thumb images so if tags are too wide it still looks decent

--- a/app/assets/stylesheets/templates.scss
+++ b/app/assets/stylesheets/templates.scss
@@ -16,6 +16,11 @@
 		z-index: 999;
 	}
 
+	img {
+		display: block;
+		margin: 0px auto;
+	}
+
 	a {
 		transition: all 0.2s ease-in-out;
 		&:hover {
