Fixed template link display bug. Was looking for url instead of link

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -81,7 +81,7 @@
 													 url: template_path(template["id"]),
 													 title: 'Assets URL'
 												 } do %>
-				  <%= template["url"] %>
+				  <%= sanitize(template["link"]) %>
 				<% end %>
 			</td>
 			<td>
