Edit link for comments now swaps in a text area with buttons. No submission yet

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -8,6 +8,10 @@
 	border-bottom: 1px $gray-lighter solid;
 }
 
+.edit-comment-form .edit-comment {
+	width: 100%;
+}
+
 .attachment-btn {
 	padding: 10px;
 	border-radius: 3px;
