--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,9 +1,11 @@
 <div class="comment">
-	
+
 	<%= render partial: "users/label", locals: { user: comment['user'] } %>
 
 	<div class="comment-content well">
-		<%= auto_link(simple_format("#{comment['content']}")) %>
+		<div class="text">
+			<%= auto_link(simple_format("#{comment['content']}")) %>
+		</div>
 	</div>
 	<div class="footer">
 		<small>
@@ -15,8 +17,11 @@
 			- <a href="#" class="comment-delete delete-link" val=<%="#{comment_path(comment['id'])}"%> data-content= '<%= render partial: "/layouts/confirm_delete", locals: { object: "Comment" } %>' data-title="Delete Comment?">
 				Delete
 			</a>
+			- <a href="#" class="comment-edit edit-link" val=<%="#{comment_path(comment['id'])}"%>>
+				Edit
+			</a>
 			<% end %>
 		</small>
-		
+
 	</div>
 </div>
