Changed description editable field to use display function with js simpleFormat instead of doing it in ruby. Also use editable link .html instead of .text since .text can have weird whitespace results

--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -83,7 +83,7 @@
 														 url: publication_request_path(@publication_request["id"]),
 														 title: 'Description'
 													 } do %>
-						<%= simple_format(@publication_request["description"]) %>
+						<%= @publication_request["description"] %>
 					<% end %>
 				</li>
 
