Use default white-space css and not use simpleFormat, since x editable seems to do it anyway

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,7 +148,7 @@ textarea {
   padding-left: 5px;
   padding-right: 5px;
   border-bottom: 0 solid black !important;
-  white-space: normal !important;
+  // white-space: normal !important;
   color: black;
   &:hover {
     box-shadow: 0 0 0 1px $gray-light;
