--- a/app/views/publication_requests/_view_controls.html.erb
+++ b/app/views/publication_requests/_view_controls.html.erb
@@ -54,4 +54,9 @@
     </ul>
   </li>
 
+  <li class="view-control quickfilter">
+    <div class="view-control-name">Quicksearch</div>
+    <%= text_field_tag "request-quicksearch", nil, class: "form-control", placeholder: "Search on any text in the request" %>
+  </li>
+
 </ul>
