Combine filters with functions

--- a/app/views/publication_requests/_view_controls.html.erb
+++ b/app/views/publication_requests/_view_controls.html.erb
@@ -57,6 +57,7 @@
   <li class="view-control quickfilter">
     <div class="view-control-name">Quicksearch</div>
     <%= text_field_tag "request-quicksearch", nil, class: "form-control", placeholder: "Search on any text in the request" %>
+    <!-- <div class="help-block">This will override any other filter you have</div> -->
   </li>
 
 </ul>
