Added hidden spans with people names so they can be used in quick search

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -30,6 +30,11 @@
 	}
 }
 
+.hidden-text {
+	visibility: hidden;
+	position: absolute; // get it out of document flow
+}
+
 
 #create-request-btn, #view-requests-btn {
 	padding: 10px;
