--- a/app/views/templates/_view_controls.html.erb
+++ b/app/views/templates/_view_controls.html.erb
@@ -1,6 +1,18 @@
-<div>
-  Filter by tags
-</div>
-<div>
-  <%= select_tag "filter-tags", options_for_select(@tag_options), class: "form-control input-lg", multiple: true, style: "width: 100%" %>
-</div>
+<ul class="nav nav-pills view-controls">
+  <li class="view-control tag-filter">
+    <div class="view-control-name">
+      Filter by tags
+    </div>
+    <div>
+      <%= select_tag "filter-tags", options_for_select(@tag_options), class: "form-control input-lg", multiple: true %>
+    </div>
+  </li>
+
+  <li class="view-control quickfilter">
+    <div class="view-control-name">
+      Quicksearch
+    </div>
+    <%= text_field_tag "template-quicksearch", nil, class: "form-control", placeholder: "Search on any text in the template" %>
+  </li>
+
+</ul>
