Somewhat improved view control layout responsiveness by putting into bootstrap columns

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,10 @@ textarea {
 	resize: vertical;
 }
 
+.select2 {
+	max-width: 100% !important;
+}
+
 .popover {
 	text-align: center !important;
 	.confirm-text {
