--- a/app/views/publication_requests/_view_controls.html.erb
+++ b/app/views/publication_requests/_view_controls.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills view-controls">
+<ul class="nav nav-pills view-controls row">
   <li role="presentation" class="view-control choose-filter dropdown">
     <div class="view-control-name filter-name">All Requests</div>
     <a id="filter-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -26,7 +26,7 @@
     </ul>
   </li>
 
-  <li role="presentation" class="view-control choose-order dropdown">
+  <li role="presentation" class="view-control choose-order dropdown ">
     <div class="view-control-name order-name">Order by <span>Date Created</span></div>
     <a id="order-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Switch order
@@ -54,7 +54,7 @@
     </ul>
   </li>
 
-  <li role="presentation" class="view-control quickfilter">
+  <li role="presentation" class="view-control quickfilter col-md-5 col-sm-12 col-xs-12">
     <div class="view-control-name">Quicksearch</div>
     <%= text_field_tag "request-quicksearch", nil, class: "form-control", placeholder: "Search on any text in the request" %>
   </li>
