--- a/app/views/templates/_view_controls.html.erb
+++ b/app/views/templates/_view_controls.html.erb
@@ -1,5 +1,5 @@
-<ul class="nav nav-pills view-controls">
-  <li class="view-control tag-filter">
+<ul class="nav nav-pills view-controls row">
+  <li class="view-control tag-filter col-md-5 col-sm-12 col-xs-12">
     <div class="view-control-name">
       Filter by tags
     </div>
@@ -8,7 +8,7 @@
     </div>
   </li>
 
-  <li class="view-control quickfilter">
+  <li class="view-control quickfilter col-md-5 col-sm-12 col-xs-12">
     <div class="view-control-name">
       Quicksearch
     </div>
