--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -31,6 +31,13 @@
 	.tag-filter {
 		// width: 40%;
 	}
+
+	.order-arrow {
+		&:hover {
+			text-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+			cursor: pointer;
+		}
+	}
 }
 
 .hidden-text {
