--- a/app/views/publication_requests/_view_controls.html.erb
+++ b/app/views/publication_requests/_view_controls.html.erb
@@ -28,6 +28,9 @@
 
   <li role="presentation" class="view-control choose-order dropdown ">
     <div class="view-control-name order-name">Order by <span>Date Created</span></div>
+    <div class="view-control-name order-arrow">
+      <span class="glyphicon glyphicon-arrow-up"></span>
+    </div>
     <a id="order-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Switch order
       <span class="caret"></span>
@@ -52,6 +55,7 @@
         <%= link_to "Status", "#", class: "order", id: "my-requests", data: { order: "status" } %>
       </li>
     </ul>
+
   </li>
 
   <li role="presentation" class="view-control quickfilter col-md-5 col-sm-12 col-xs-12">
