Add title to order arrow. Tooltip doesn't work for some reason

--- a/app/views/publication_requests/_view_controls.html.erb
+++ b/app/views/publication_requests/_view_controls.html.erb
@@ -28,7 +28,7 @@
 
   <li role="presentation" class="view-control choose-order dropdown ">
     <div class="view-control-name order-name">Order by <span>Date Created</span></div>
-    <div class="view-control-name order-arrow">
+    <div class="view-control-name order-arrow" title="Ascending">
       <span class="glyphicon glyphicon-arrow-up"></span>
     </div>
     <a id="order-dropdown" class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
