--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -31,7 +31,7 @@
 				<%= image_tag(template["image_small"], class: "image-thumbnail") %>
 			</td>
 			<td class="">
-				<%= link_to "#", id: 'name-field', class: 'editable-field editable',
+				<%= link_to "#", class: 'editable-field editable name-field',
 												 data: {
 													 pk: template["id"],
 													 model: 'template',
@@ -44,7 +44,7 @@
 				<% end %>
 			</td>
 			<td class="">
-				<%= link_to "#", id: 'dimen-field', class: 'editable-field editable',
+				<%= link_to "#", class: 'editable-field editable dimen-field',
 												 data: {
 													 pk: template["id"],
 													 model: 'template',
@@ -72,7 +72,7 @@
         <%= select_tag "template[all_tags]", options_for_select(@tag_options, template["tags"].map { |tag| tag["name"] }), include_hidden: false, class: "template-tags form-control input-lg", style: "width: 80%;", multiple: true, data: { url: "/templates/#{template['id']}" }  %>
 			</td>
 			<td class="">
-				<%= link_to "#", id: 'url-field', class: 'editable-field editable',
+				<%= link_to "#", class: 'editable-field editable url-field',
 												 data: {
 													 pk: template["id"],
 													 model: 'template',
